quick fix for links running over the width of the postwrapper - overflow:hidden

--- a/fall2012/css/gsappwork.css
+++ b/fall2012/css/gsappwork.css
@@ -80,6 +80,10 @@ body {
     border: none; 
 
     }
+
+    .postwrapper{
+      overflow:hidden;
+    }
     
     .text.post blockquote, .post.quote blockquote, blockquote {  
       margin-left: -30px; 
